--- a/resources/css/styleLogin.css
+++ b/resources/css/styleLogin.css
@@ -1,16 +1,3 @@
-.login-container{
-    height: 60vh;
-    width: 50vh;
-    background-color: white;
-    margin-top: 10vh;
-    margin-left: 20vh;
-}
-
-.login-form{
-    max-width: 100%;
-    width: 370px;
-
-}
 #Logo{
     height: 130px;
     width: 300px;
@@ -33,15 +20,7 @@
     margin-top: 4vh;
 }
 
-.float-right{
-    background-color: white;
-    height: 100vh;
-    width: 100vh;
-}
-
-#Prueba{
-    height: 120vh;
-    width: 100vh;
-    margin-top: -15vh;
-    margin-left: 10vh;
+#taza{
+    margin-left: 23vh;
+    margin-top: -5vh;
 }
