--- a/resources/css/styleAdmin.css
+++ b/resources/css/styleAdmin.css
@@ -1,3 +1,4 @@
+/* fonts */
 a{
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
@@ -5,4 +6,20 @@ a{
 p{
     font-family: 'Montserrat', sans-serif;
     font-size: 1px;
+}
+label{
+    font-family: 'Montserrat', sans-serif;
+}
+
+/* tables */
+tr{
+    background-color: #EDF7F6;
+}
+td{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+}
+tr{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
 }
